--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -64,8 +64,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="LIVE MAP"
-                android:textColor="@color/hive_text_secondary"
+                android:text="LIVE MAP"   android:textColor="@color/hive_text_secondary"
                 android:layout_marginTop="10dp"
                 android:textSize="12sp"
                 android:textStyle="bold"/>
@@ -89,8 +88,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="REPORTS"
-                android:textColor="@color/hive_text_secondary"
+                android:text="BROADCAST MESSAGE"  android:textColor="@color/hive_text_secondary"
                 android:layout_marginTop="10dp"
                 android:textSize="12sp"
                 android:textStyle="bold"/>
@@ -114,7 +112,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="ALERTS"
+                android:text="SAFETY ALERTS"
                 android:textColor="@color/hive_text_secondary"
                 android:layout_marginTop="10dp"
                 android:textSize="12sp"
@@ -139,7 +137,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="CONFIG"
+                android:text="SETTINGS"
                 android:textColor="@color/hive_text_secondary"
                 android:layout_marginTop="10dp"
                 android:textSize="12sp"
