--- a/app/src/main/res/layout/activity_config.xml
+++ b/app/src/main/res/layout/activity_config.xml
@@ -10,55 +10,64 @@
         android:id="@+id/tvConfigTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="SYSTEM PROTOCOLS"
+        android:text="SYSTEM CORE"
         android:textColor="@color/white"
         android:textSize="22sp"
         android:textStyle="bold"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <Switch
-        android:id="@+id/switchStealth"
-        android:layout_width="match_parent"
+    <TextView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:text="STEALTH MODE (DIM SCREEN)"
-        android:textColor="@color/hive_text_secondary"
-        android:thumbTint="@color/hive_accent"
-        android:trackTint="#505050"
+        android:text="CONFIGURATION AND MAINTENANCE"
+        android:textColor="#80FFFFFF"
+        android:textSize="12sp"
+        app:layout_constraintTop_toBottomOf="@id/tvConfigTitle"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btnResetNetwork"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_marginTop="60dp"
+        android:text="RESET NETWORK LINK"
+        android:background="@drawable/bg_input_glass"
+        android:textColor="@color/hive_accent"
+        android:textStyle="bold"
+        android:letterSpacing="0.1"
         app:layout_constraintTop_toBottomOf="@id/tvConfigTitle" />
 
-    <Switch
-        android:id="@+id/switchLocation"
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:text="ACTIVE LOCATION TRACKING"
-        android:textColor="@color/hive_text_secondary"
-        android:checked="true"
-        android:thumbTint="@color/hive_accent"
-        android:trackTint="#505050"
-        app:layout_constraintTop_toBottomOf="@id/switchStealth" />
+        android:text="Use this if connection drops or new devices are not appearing."
+        android:textColor="#60FFFFFF"
+        android:textSize="12sp"
+        android:gravity="center"
+        android:layout_marginTop="10dp"
+        app:layout_constraintTop_toBottomOf="@id/btnResetNetwork" />
 
     <Button
         android:id="@+id/btnWipe"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-        android:text="EMERGENCY WIPE (CLEAR CACHE)"
+        android:layout_height="60dp"
+        android:layout_marginBottom="30dp"
+        android:text="EMERGENCY WIPE (DATA + LOGOUT)"
         android:backgroundTint="#D50000"
         android:textColor="@color/white"
-        app:layout_constraintTop_toBottomOf="@id/switchLocation" />
-
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btnLogout"
-        android:layout_width="match_parent"
-        android:layout_height="55dp"
-        android:layout_marginTop="20dp"
-        android:text="TERMINATE SESSION"
-        android:background="@drawable/bg_input_glass"
-        android:textColor="@color/white"
         android:textStyle="bold"
-        app:layout_constraintTop_toBottomOf="@id/btnWipe" />
+        app:layout_constraintBottom_toBottomOf="parent" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="WARNING: IRREVERSIBLE ACTION"
+        android:textColor="#D50000"
+        android:textSize="12sp"
+        android:textStyle="bold"
+        android:gravity="center"
+        android:layout_marginBottom="10dp"
+        app:layout_constraintBottom_toTopOf="@id/btnWipe" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
